hphp/hack/test/typecheck/runtime_generic_bad.php.exp
File "runtime_generic_bad.php", line 4, characters 10-10:
Erased generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
