hphp/hack/test/typecheck/runtime_generic_bad.php
<?hh // partial

function f<T>() {
  return T::foo;
}
